overflow-x fix

--- a/web/style/style.css
+++ b/web/style/style.css
@@ -549,6 +549,7 @@ h3{
     text-align: center; 
     background-color: transparent !important;
     color: black !important; 
+    overflow-x: hidden;
 }
 .blur {
     position: absolute;
@@ -1726,6 +1727,7 @@ h3{
     scroll-snap-type: y mandatory;
     scroll-behavior: smooth;
     z-index: 1;
+    overflow-x: hidden;
 }
 #aboutSection, #modulesSection{
     font-family: 'Jura';
